# PipeSec

./: README.md  TESTING_REPORT.md  pyproject.toml
data/: secret_patterns.json
dynamic/: .gitignore  Containerfile  Makefile  go.mod
samples/: safe-all.yml  vulnerable-all.yml
scripts/: script.sh
static/: .gitignore  __init__.py  __main__.py  cli.py  models.py  pyproject.toml  secrets.py
static/analyzers/: static_github_actions.py
static/reporting/: console.py  json_report.py
static/rules/: __init__.py  base.py  checkout_hardening.py  dangerous_triggers.py  debug_tracing.py  docker_image_pinning.py  hardcoded_secrets.py  insecure_downloads.py  oidc_permissions.py  permissions.py  pr_target_checkout.py  registry.py  secret_exposure.py  self_hosted_runners.py  suspicious_env.py  third_party_action_secrets.py  unpinned_actions.py  untrusted_pr_target.py  utils.py
static/src/pipesec/: __init__.py  cli.py
static/src/static/: secrets.py
static/src/static/analyzers/: __init__.py  logs.py  static_github_actions.py
static/src/static/reporting/: __init__.py  json_report.py
static/src/static/rules/: checkout_hardening.py  dangerous_triggers.py  debug_tracing.py  docker_image_pinning.py  hardcoded_secrets.py  insecure_downloads.py  permissions.py  registry.py  secret_exposure.py  suspicious_env.py  third_party_action_secrets.py  untrusted_pr_target.py  utils.py
test_runs/20260104T115842Z_linux/: dast_run_network_egress.cmd.txt  dast_run_network_egress.header.txt  dast_run_network_egress.stdout.txt  dast_run_secret_leak.cmd.txt  dast_run_secret_leak.header.txt  (+15 more)
(+8 files in other folders)
